Fixing projects and contact buttons

--- a/index.html
+++ b/index.html
@@ -1,110 +1,110 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title>James Winslow | Data Scientist</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Background -->
-    <div id="bg"></div>
+	<head>
+		<title>James Winslow</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-    <!-- Wrapper -->
-    <div id="wrapper">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-      <!-- Header -->
-      <header id="header">
-        <div class="logo">
-          <span class="icon solid fa-terminal"></span>
-        </div>
-        <div class="content">
-          <div class="inner">
-            <h1>James Winslow</h1>
-            <p>Data Scientist • Biostatistician • Developer</p>
-          </div>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="#about" data-link="about">About</a></li>
-            <li><a href="#projects" data-link="projects">Projects</a></li>
-            <li><a href="#contact" data-link="contact">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+				<!-- Header -->
+					<header id="header">
+						<div class="logo">
+							<span class="icon fa-user"></span>
+						</div>
+						<div class="content">
+							<div class="inner">
+								<h1>James Winslow</h1>
+								<p>Data Scientist | Storyteller | Problem Solver</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#about">About</a></li>
+								<li><a href="#projects">Projects</a></li>
+								<li><a href="#prompt-library">Prompt Library</a></li>
+								<li><a href="#contact">Contact</a></li>
+							</ul>
+						</nav>
+					</header>
 
-      <!-- Main -->
-      <div id="main">
+				<!-- Main -->
+					<div id="main">
 
-        <!-- About -->
-        <article id="about">
-          <h2 class="major">About Me</h2>
-          <span class="image main"><img src="images/me.jpg" alt="James Winslow" /></span>
-          <p>I'm a data scientist with a background in biostatistics and a deep love for storytelling through numbers. With experience spanning government, healthcare, and tech, I thrive on solving complex problems with a mix of statistical rigor and real-world curiosity. I believe in making data accessible, actionable, and — dare I say — a little bit fun.</p>
-        </article>
+						<!-- About -->
+							<article id="about">
+								<h2 class="major">About</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>Hi, I’m James — a data scientist with a background in public health, biostatistics, and storytelling. I combine analytical rigor with clear communication to solve complex problems and build things that matter. I’m currently working on multiple projects that showcase my skills in Python, web development, and machine learning. Explore my work below or reach out to connect.</p>
+							</article>
 
-        <!-- Projects -->
-        <article id="projects">
-          <h2 class="major">Projects</h2>
-          <p>Check out some of my featured projects below:</p>
+						<!-- Projects -->
+							<article id="projects">
+								<h2 class="major">Projects</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<ul>
+									<li><a href="https://github.com/james-winslow/WeddingBingo" target="_blank">WeddingBingo: Azure Flask Web App</a></li>
+									<li><a href="https://github.com/james-winslow/Instagram-Post-Optimizer" target="_blank">Instagram Post Optimizer: Image Resizing & Bordering Tool</a></li>
+									<!-- <li><a href="#">Survivor NLP Analyzer (Coming Soon)</a></li> -->
+								</ul>
+							</article>
 
-          <h3>📸 Instagram Photo Resizer & Quality Optimizer</h3>
-          <p>A Python-based image processing tool that resizes photos of mixed aspect ratios for Instagram's carousel layout, maintaining high resolution and visual consistency using intelligent padding based on dominant colors. Deployed as an Azure web app.</p>
+						<!-- Prompt Library -->
+							<article id="prompt-library">
+								<h2 class="major">Prompt Library</h2>
+								<p>This is a collection of useful AI prompts I’ve crafted over time for coding, communication, design, and problem solving. Feel free to borrow or remix anything you find here!</p>
+								<ul>
+									<li><strong>Resume Review:</strong> "Pretend you're a technical recruiter. What are the strengths and weaknesses of this resume?"
+									<li><strong>Debugging Helper:</strong> "Here’s the error I’m getting — can you explain it to me and suggest a fix?"
+									<li><strong>LinkedIn Post Generator:</strong> "Write me a LinkedIn post that highlights the key lessons I learned from building this project."
+								</ul>
+							</article>
 
-          <h3>🎉 Wedding Bingo (Azure Web App)</h3>
-          <p>A Flask-based app that allows guests at a wedding to play themed bingo on their phones. Designed, deployed, and styled to be responsive and festive, hosted for free on Azure. Highlights include JavaScript interactivity, CSS customization, and cloud deployment.</p>
+						<!-- Contact -->
+							<article id="contact">
+								<h2 class="major">Contact</h2>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="4"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</form>
+							</article>
 
-          <!--
-          <h3>🪢 Survivor Strategy Tracker (Coming Soon)</h3>
-          <p>We're building a tool that uses transcripts and data from Survivor episodes to explore alliance dynamics, vote patterns, and player behavior using LLMs. Stay tuned!</p>
-          -->
+					</div>
 
-        </article>
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy; James Winslow. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
 
-        <!-- Contact -->
-        <article id="contact">
-          <h2 class="major">Contact</h2>
-          <form method="post" action="https://formspree.io/f/your-form-id">
-            <div class="fields">
-              <div class="field half">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" />
-              </div>
-              <div class="field half">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" />
-              </div>
-              <div class="field">
-                <label for="message">Message</label>
-                <textarea name="message" id="message" rows="4"></textarea>
-              </div>
-            </div>
-            <ul class="actions">
-              <li><input type="submit" value="Send Message" class="primary" /></li>
-            </ul>
-          </form>
-          <ul class="icons">
-            <li><a href="https://github.com/james-winslow" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-            <li><a href="https://www.linkedin.com/in/james-winslow" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-          </ul>
-        </article>
+			</div>
 
-      </div>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <p class="copyright">&copy; James Winslow. Design based on Dimension by HTML5 UP.</p>
-      </footer>
-
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
-  </body>
+	</body>
 </html>
