--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic01.jpg" alt="Mountain Landscape" /></span>
 								<p>Hi, I’m James — a data scientist with a background in public health, biostatistics, and storytelling. I combine analytical rigor with clear communication to solve complex problems and build things that matter. I’m currently working on multiple projects that showcase my skills in Python, web development, and machine learning. Explore my work below or reach out to connect.</p>
 							</article>
 
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic02.jpg" alt="Mountain Summit" /></span>
 								<ul>
 									<li><a href="https://github.com/james-winslow/WeddingBingo" target="_blank">WeddingBingo: Azure Flask Web App</a></li>
 									<li><a href="https://github.com/james-winslow/Instagram-Post-Optimizer" target="_blank">Instagram Post Optimizer: Image Resizing & Bordering Tool</a></li>
@@ -57,37 +57,24 @@
 						<!-- Prompt Library -->
 							<article id="prompt-library">
 								<h2 class="major">Prompt Library</h2>
+								<span class="image main"><img src="images/prompt-library.jpg" alt="Prompt Library" /></span>
 								<p>This is a collection of useful AI prompts I’ve crafted over time for coding, communication, design, and problem solving. Feel free to borrow or remix anything you find here!</p>
 								<ul>
-									<li><strong>Resume Review:</strong> "Pretend you're a technical recruiter. What are the strengths and weaknesses of this resume?"
-									<li><strong>Debugging Helper:</strong> "Here’s the error I’m getting — can you explain it to me and suggest a fix?"
-									<li><strong>LinkedIn Post Generator:</strong> "Write me a LinkedIn post that highlights the key lessons I learned from building this project."
+									<li><strong>Resume Review:</strong> "Pretend you're a technical recruiter. What are the strengths and weaknesses of this resume?"</li>
+									<li><strong>Debugging Helper:</strong> "Here’s the error I’m getting — can you explain it to me and suggest a fix?"</li>
+									<li><strong>LinkedIn Post Generator:</strong> "Write me a LinkedIn post that highlights the key lessons I learned from building this project."</li>
 								</ul>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<p>Feel free to reach out to me through the platforms below:</p>
+								<ul>
+									<li><a href="https://www.linkedin.com/in/james-winslow/" target="_blank">LinkedIn</a></li>
+									<li><a href="https://github.com/james-winslow" target="_blank">GitHub</a></li>
+									<li><a href="mailto:james@example.com">Email Me</a></li>
+								</ul>
 							</article>
 
 					</div>
