Fixing projects and contact buttons

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<ul>
 								<li><a href="#about">About</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#prompt-library">Prompt Library</a></li>
+								<li><a href="prompt-library.html">Prompt Library</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -50,19 +50,6 @@
 								<ul>
 									<li><a href="https://github.com/james-winslow/WeddingBingo" target="_blank">WeddingBingo: Azure Flask Web App</a></li>
 									<li><a href="https://github.com/james-winslow/Instagram-Post-Optimizer" target="_blank">Instagram Post Optimizer: Image Resizing & Bordering Tool</a></li>
-									<!-- <li><a href="#">Survivor NLP Analyzer (Coming Soon)</a></li> -->
-								</ul>
-							</article>
-
-						<!-- Prompt Library -->
-							<article id="prompt-library">
-								<h2 class="major">Prompt Library</h2>
-								<span class="image main"><img src="images/prompt-library.jpg" alt="Prompt Library" /></span>
-								<p>This is a collection of useful AI prompts I’ve crafted over time for coding, communication, design, and problem solving. Feel free to borrow or remix anything you find here!</p>
-								<ul>
-									<li><strong>Resume Review:</strong> "Pretend you're a technical recruiter. What are the strengths and weaknesses of this resume?"</li>
-									<li><strong>Debugging Helper:</strong> "Here’s the error I’m getting — can you explain it to me and suggest a fix?"</li>
-									<li><strong>LinkedIn Post Generator:</strong> "Write me a LinkedIn post that highlights the key lessons I learned from building this project."</li>
 								</ul>
 							</article>
 
@@ -73,7 +60,7 @@
 								<ul>
 									<li><a href="https://www.linkedin.com/in/james-winslow/" target="_blank">LinkedIn</a></li>
 									<li><a href="https://github.com/james-winslow" target="_blank">GitHub</a></li>
-									<li><a href="mailto:james@example.com">Email Me</a></li>
+									<li><a href="mailto:james.r.winslow@gmail.com">Email Me</a></li>
 								</ul>
 							</article>
 
